@@ -25,7 +25,7 @@
   "pH": "pH",
   "acidic": "Acidic",
   "basic": "Basic",
-  "neutral": "(Neutral) 7",
+  "neutral": "Neutral",
   "concentration": "Concentration",
   "quantity": "Quantity",
   "moleculeCount": "Molecule count",
